src/test/deca/context/invalid/ContextAvecObjet/Cast/intCastBoolean.deca
//Description
//  Cast d'un boolean en int
//
//Réponse
//  Erreur contextuelle ligne 9
//  un boolean ne peut pas être cast dans un int
{
    boolean a = true;
    int x = (int)(a);
}